# griptape-astra-db

./: .env.template  CHANGES  README.md  pyproject.toml
.github/workflows/: all-tests.yml  code-checks.yml
examples/: example.py
griptape_astra_db_tools/: __init__.py  manifest.yml  vector_store_driver.py
tests/: test_astra_db_vector_store_driver.py
