[tool.poetry]
name = "griptape_astra_db_tools"
version = "0.1.3"
description = "A Griptape toolset for DataStax Astra DB."
authors = ["Stefano Lottini <stefano.lottini@datastax.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
astrapy = "^1.3.0"
griptape = "^0.28"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "~=7.1"
pytest-mock = "*"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
mypy = "~1.9.0"
ruff = "~0.2.1"

[tool.black]
line-length=120
skip_magic_trailing_comma = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
